--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "framer-motion": "^10.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.14.2",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.10",
